# sdl_template

./: .gitignore  CMakeLists.txt  main.cpp
assets/: basic.frag  basic.vert  default.vert  onePointLight.frag  onePointLight.vert  onePointLightTP.vert
assets/es2/: es_basic.vert  es_onePointLight.frag  es_onePointLight.vert  es_onePointLightTP.vert
assets/glsl/sample2/: shader.frag  shader.vert  shader_es.frag  shader_es.vert
assets/glsl/sample3/: shader_es.frag  shader_es.vert  shader_final_pass.frag  shader_final_pass.vert  shader_instancing.vert
assets/models/: smooth_monkey.json  sphere.json
assets/music/: readme.md
headers/: Camera.h  Collider.h  Control.h  Game.h  Geometry.h  Light.h  Line.h  Mesh.h  Model.h  Normals.h  Object.h  PlayMusic.h  Sample.h  SegmentCollider.h  ShaderProgram.h  SphereCollider.h  utils.h
headers/custom/: TrianglePicker.h
headers/material/: Material.h
raw_assets/html/: shell.html
samples/: Sample1.cpp  Sample2.cpp  Sample3.cpp
src/: Camera.cpp  Collider.cpp  Game.cpp  Geometry.cpp  Line.cpp  Mesh.cpp  Model.cpp  Normals.cpp  Object.cpp  PlayMusic.cpp  ShaderProgram.cpp  utils.cpp
src/custom/: TrianglePicker.cpp
src/material/: Material.cpp
utils/: download_third_parties.bash  download_third_parties.sh  env.bash  gconv.py
